# vibe-service-framework

./: pyproject.toml
src/vibe_service/: __init__.py  auth.py  config.py  errors.py  health.py  logging.py  mcp.py  service.py  testing.py
tests/: test_resilient_session.py  test_service.py
