[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-service-framework"
version = "0.1.0"
description = "Shared framework for vibe ecosystem services. Dual-protocol (REST + MCP), config, auth, logging, health, errors, testing."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "mcp>=1.26.0",
    "fastapi>=0.115.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "mypy>=1.10",
    "ruff>=0.6",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "pre-commit>=3.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.bandit]
targets = ["src/"]
